--- a/index.html
+++ b/index.html
@@ -94,12 +94,14 @@
     // ----------------- CONFIGURE THIS SECTION -------------------
     // Replace with your Firebase project config:
     const firebaseConfig = {
-        apiKey: "YOUR_API_KEY",
-        authDomain: "YOUR_PROJECT.firebaseapp.com",
-        databaseURL: "https://YOUR_PROJECT.firebaseio.com",
-        projectId: "YOUR_PROJECT",
-        appId: "YOUR_APP_ID"
-    };
+        apiKey: "AIzaSyD8z3e5j9y48wJkyU89F7M19cDfxQ4P8uo",
+  authDomain: "chess-online-ebc1f.firebaseapp.com",
+  databaseURL: "https://chess-online-ebc1f-default-rtdb.asia-southeast1.firebasedatabase.app",
+  projectId: "chess-online-ebc1f",
+  storageBucket: "chess-online-ebc1f.firebasestorage.app",
+  messagingSenderId: "825068912703",
+  appId: "1:825068912703:web:48330509c612b8b4cdf88a"
+};
     // ------------------------------------------------------------
 
     firebase.initializeApp(firebaseConfig);
